techsophy-platform is replaced with TokenUtils